// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubtractionItem /> should render when [ready=false] 1`] = `
<Item__StyledSubtractionItem
  key="foo"
  to="/subtraction/foo"
>
  <strong>
    Foo
  </strong>
  <span>
    <SubtractionItemIcon
      ready={false}
    />
     
    <span>
      Importing
    </span>
  </span>
</Item__StyledSubtractionItem>
`;

exports[`<SubtractionItem /> should render when [ready=true] 1`] = `
<Item__StyledSubtractionItem
  key="foo"
  to="/subtraction/foo"
>
  <strong>
    Foo
  </strong>
  <span>
    <SubtractionItemIcon
      ready={true}
    />
     
    <span>
      Ready
    </span>
  </span>
</Item__StyledSubtractionItem>
`;

exports[`<SubtractionItemIcon /> should render when [ready=false] 1`] = `
<Loader
  color="#3c8786"
  size="14px"
/>
`;

exports[`<SubtractionItemIcon /> should render when [ready=true] 1`] = `
<Icon
  color="green"
  faStyle="fas"
  fixedWidth={false}
  name="check"
/>
`;
